--- a/docs/content/quickstart/manifold.mdx
+++ b/docs/content/quickstart/manifold.mdx
@@ -2,3 +2,17 @@
 title: 'For fun: building a gambling bot? (disclaimer: not really)'
 order: 1
 ---
+
+We're going to use nearly every client method given to us to implement this.
+
+Setup:
+
+- `createItem`: Setup to create mana.
+
+Actual app:
+
+- `createInstance`: to create an initial supply of mana for everybody that decides to join us in the fun.
+
+Ones we don't end up using:
+
+- `create
