--- a/docs/content/bot/bag-inventory.mdx
+++ b/docs/content/bot/bag-inventory.mdx
@@ -1,4 +1,6 @@
 ---
-title: '/bag-inventory'
+title: /inventory
 order: 3
 ---
+
+View your inventory, by passing in `me` for yourself (`/bag me`) or
