--- a/docs/content/quickstart/exploring.mdx
+++ b/docs/content/quickstart/exploring.mdx
@@ -2,3 +2,12 @@
 title: What's this? Getting started
 order: 0
 ---
+
+Bag is a whole RPG system within the [Hack Club Slack](https://hackclub.com/slack), except with one little twist: you can make the universe cooler!
+
+Head over to the [Hack Club Slack](https://hackclub.slack.com) and run `/bag me` and you'll find out what I mean!
+
+Afterwards check out these channels:
+
+* [#market](https://app.slack.com/client/T0266FRGM/C06GA0PSXC5)
+* [#craftery](https://app.slack.com/client/T0266FRGM/C06P09REBK4)
