Routes ready for launch

--- a/docs/content/client/methods.mdx
+++ b/docs/content/client/methods.mdx
@@ -2,3 +2,126 @@
 title: Methods
 order: 2
 ---
+
+## Types
+
+TODO
+
+## Methods 
+
+### `createInstances`
+
+Returns
+
+### `createInstance`
+
+Returns
+
+### `createApp`
+
+Returns
+
+### `createItem`
+
+Returns
+
+### `createRecipe`
+
+Returns
+
+### `createTrade`
+
+Returns
+
+### `createAction`
+
+Returns
+
+### `getIdentities`
+
+Returns
+
+### `getIdentity`
+
+Returns
+
+### `getInventory`
+
+Returns
+
+### `getItem`
+
+Returns
+
+### `getItems`
+
+Returns
+
+### `getInstance`
+
+Returns
+
+### `getApp`
+
+Returns
+
+### `getTrade`
+
+Returns
+
+### `getRecipes`
+
+Returns
+
+### `getRecipe`
+
+Returns
+
+### `getAction`
+
+Returns
+
+### `updateIdentityMetadata`
+
+Returns
+
+### `updateInstance`
+
+Returns
+
+### `updateItem`
+
+Returns
+
+### `updateApp`
+
+Returns
+
+### `updateTrade`
+
+Returns
+
+### `updateRecipe`
+
+Returns
+
+### `updateAction`
+
+Returns
+
+### `deleteApp`
+
+Returns
+
+### `deleteInstance`
+
+Returns
+
+### `closeTrade`
+
+Returns
+
+### `verifyKey`
+
+Returns
+
